--- a/src/app/admindashboard/admindashboard.component.html
+++ b/src/app/admindashboard/admindashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="topNav">
     <!-- <body class="container"> -->
         <div class="log d-flex justify-content-end">
             <nav class="header">
@@ -54,7 +54,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="tab-content ps-3 mt-5" id="myTabContent">
+        <div class="tab-content ps-3 " id="myTabContent">
 
             <h1 class="totalheaderText"><b>Total</b></h1>
 
@@ -73,7 +73,7 @@
                                     </path>
                                 </g>
                                 </svg>
-                            <h4 class="logMade">logs Made&nbsp;&nbsp;<span class="numberStats"><b>{{totaltasksData.total_requests}}</b></span></h4> 
+                            <h4 class="logMade paddingBottom">logs Made&nbsp;&nbsp;<span class="numberStats"><b>{{totaltasksData.total_requests}}</b></span></h4> 
                             
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <img class="pendinglogo"src="../../../assets/images/pendingLogs.png">
                             
                             
-                            <h4 class="card-title">Pending Logs&nbsp;&nbsp;<span class="numberStats"><b>{{statsData.SoshanguveSouthActive}}</b></span></h4> 
+                            <h4 class="card-title paddingBottom">Pending Logs&nbsp;&nbsp;<span class="numberStats"><b>{{statsData.SoshanguveSouthActive}}</b></span></h4> 
                             
                         </div>
                     </div>
@@ -100,8 +100,8 @@
                                         d="M12 15C7.58 15 4 16.79 4 19V21H20V19C20 16.79 16.42 15 12 15ZM8 9C8 10.0609 8.42143 11.0783 9.17157 11.8284C9.92172 12.5786 10.9391 13 12 13C13.0609 13 14.0783 12.5786 14.8284 11.8284C15.5786 11.0783 16 10.0609 16 9H8ZM11.5 2C11.2 2 11 2.21 11 2.5V5.5H10V3C10 3 7.75 3.86 7.75 6.75C7.75 6.75 7 6.89 7 8H17C16.95 6.89 16.25 6.75 16.25 6.75C16.25 3.86 14 3 14 3V5.5H13V2.5C13 2.21 12.81 2 12.5 2H11.5Z">
                                     </path>
                                 </g>
-                            </svg>
-                            <h4 class="card-title">In-progress Logs&nbsp;&nbsp;<span class="numberStats"><b>{{totalInprogress.length}}</b></span></h4> 
+                            </svg> 
+                            <h4 class="card-title paddingBottom">In-progress Logs&nbsp;&nbsp;<span class="numberStats"><b>{{totalInprogress.length}}</b></span></h4> 
                             
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             </g>
                         </svg>
     
-                            <h4 class="card-title">Completed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{statsData.SoshanguveSouthComplete}}</b></span></h4>    
+                            <h4 class="card-title paddingBottom">Completed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{statsData.SoshanguveSouthComplete}}</b></span></h4>    
                         </div>
                     </div>
                     <div class="ticket card closed" id="closedlogPAdding" style="width: 15rem;">
@@ -136,7 +136,7 @@
                                     </path>
                                 </g>
                             </svg>
-                            <h4 class="card-title">Closed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{total.Total_Closed}}</b></span></h4>
+                            <h4 class="card-title paddingBottom">Closed Logs&nbsp;&nbsp;<span class="numberStats"><b>{{total.Total_Closed}}</b></span></h4>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                                 </g>
                                 </svg>
                             
-                                <h4 class="card-title numberofArisan">Number of Artisans&nbsp;&nbsp;<span class="numberStats"><b>{{totalartisan.length}}</b></span></h4>
+                                <h4 class="card-title  numberofArisan">Number of Artisans&nbsp;&nbsp;<span class="numberStats"><b>{{totalartisan.length}}</b></span></h4>
                             
                             </div>
                         </div>
