--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -39,9 +39,9 @@
                 </ul>
             </nav>
         </div>
-        <div class="tab-content ps-3 mt-5" id="myTabContent">
 
-
+        
+        <div class="tab-content ps-5 " id="myTabContent">
             <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
                 <div class="stats">
@@ -102,3 +102,4 @@
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
     </footer> 
 </body>
+
