--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -22,6 +22,9 @@
                       <a class="nav-link active" id="ModalExample" (click)="openLogin()">ADMIN</a>
                   </li>
                   <li>
+                    <a class="nav-link active" id="ModalExample" (click)="openHOD()">HOD</a>
+                </li>
+                  <li>
                     <a class="nav-link active" id="ModalExample" (click)="openTech()">TECHNICIAN</a>
                   </li>
                   
