--- a/src/app/staffsendrequest/staffsendrequest.component.css
+++ b/src/app/staffsendrequest/staffsendrequest.component.css
@@ -2,12 +2,10 @@ body {
     width: 100%;
   }
   .stats{
-    margin: -0.8%;
+    margin: 10.8%;
   }
-
-
-/* Start of the navigation bar*/
-.header {
+  /* Start of the navigation bar*/
+  .header {
     height: 82px;
     background: #0c0c0c;
     width: 100%;
@@ -57,9 +55,8 @@ body {
     background-color: #005596;
   }
   /* End of the navigation bar*/
-
   /* Start of  Everything on the side nav*/
-.sideNav {
+  .sideNav {
     float: left;
    
     box-shadow: 5px 0 2px #969292;
@@ -108,88 +105,68 @@ body {
   /*Adding a hover effect on the sidenav links*/
   #hover:hover {
     font-weight: bold;
-    width: 115px; 
    
    
   }
+  /*Cards that show progress on top on the right content*/
 
   /*SideNav content on the left*/
-.container2{
+  .container2{
     margin-top: 3.8%;
   }
   /*Div for the content on the right*/
-.tab-content {
-    float: right;
-    width: 80%;
-    margin-right: 7%;
+
+  form,label {
+    font-weight: bold ;
   }
-
-
-
-  footer{
-    background: black;
-    padding: 8px;
-    color: #eee;
-    text-align: center;
-    margin-left: 0%;
-    margin-top: auto;
-    width: 100%;
-    height: 40px;
-    /* position: absolute; */
-    /* bottom: 0;
-    width: 100%; */
-  }
-
   .reqhead1{
-     
     font-weight: bold;
-  font-size: 28px;
-  color: #000000;
-  height: 40px;
-    margin:5% 6%;
-    padding-left: 50px;
+font-weight: 700;
+font-size: 28px;
+color: #000000;
 }
+  .tab-content {
+      float: right;
+      width: 80%;
+      margin-right: 0%;
+    }
+    /*Footer*/
+  footer{
+      background: black;
+      padding: 8px;
+      color: #eee;
+      text-align: center;
+      margin-left: 0%;
+      margin-top: auto;
+      width: 100%;
+      height: 40px;
+      /* position: absolute; */
+      /* bottom: 0;
+      width: 100%; */
+    }
 
+  .table {
+      width: 90%;
+      margin: auto auto;
+    }
+    #formContent{
+        margin: 5% auto;
+    }
+  select#Cater,input.form-control {
+      width: 100%;
+      padding: 0 0;
+      border-radius: 0.25rem;
+    }
 
-.down{
-  margin: 7%;
-}
-
-.color {
-    color: black;
-}
-
-.radionBtn {
-
-    display: flex;
-    flex-direction:row;
-    margin: 1% 7.78%;
-    padding: 5%;
-
-    /*border: 1px solid red;*/
-    
-
-}
-
-.btn-submit button {
-
-    width: 100px;
-    height: 45px;
-    background: #005596;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px;
-   margin: 2% 45%;
-
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: 0.06em;
-
-    color: #FFFFFF;
-   
-}
-
-#b12{
-    float: right;
+  .btnSubmit{
+    border: 1px #005596 solid;
+    padding: 10px;
+    color: #005596;
   }
+  .btnSubmit:hover{
+    font-weight: 600;
+    background-color: #005596;
+    color: white;
+  }
+
+  
