--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -1,87 +1,94 @@
-<div class="log d-flex justify-content-end">
-    <nav class="header">
-        <div id="logo-text">
-            <a>
-                <img src="../../../assets/images/tut.png" alt="SMART FARM"
-                    style="float: left;height: 72px;width: 225px;" routerLink="read">
-            </a>
-        </div>
-        <div id="menu-icon">
-            <i class="fas fa-bars"></i>
-        </div>
 
-    </nav>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-
-
-<body>
-    <div class="d-flex justify-content-between">
-    
-    </div>
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                            routerLink="/staffpage"><b>REQUEST</b></a></li>
-                    </ul>
-                    <ul>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                            disabled="true"><b>TRACKING</b></a></li>
-                </ul>
-   
+<div class="container-fluid">
+    <!-- <body class="container"> -->
+        <div class="log d-flex justify-content-end">
+            <nav class="header">
+                <div id="logoDiv">
+                    <a>
+                        <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                            style="float: left;height: 70px;width: 225px;" routerLink="read">
+                    </a>
+                </div>
+                <div id="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
                 <ul>
                     <li>
-        
+       
                         <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
                                 class="btn btn-success">LOGOUT</button></a>
                     </li>
                 </ul>
-    
+        
             </nav>
         </div>
-    <div class="contentContainerRight">
-        <div class="backFrom" >
-            <h3 class="toptitle">Staff Track Request</h3>
-        </div>
-        <div class="stats d-flex justify-content-left px-4">
-        <form>
+</div>
+<body>
 
-            <div class="w-100% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" >
-                <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
-                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{todo}}</label>
-                <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned</label>
-                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress   {{progress}}</label>
-                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold        {{onHold}}</label>
-                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done       {{completed}}</label>
-            </div>
-            </form>
-<form>
-    
-            <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%">
-                <h1><b>REQUESTS</b></h1>
-                <div class="middleTableDivTextMargin" *ngFor="let request of allRequest">
-                    <p>Category:{{request.category}}</p>
-                    <p>Description:{{request.description}}</p>
-                    <p>Request Date:{{request.req_date}}</p>
-                    <p>Venue:{{request.venue}}</p>
-                    <button type="button" class="btn btn-secondary" *ngIf="numberDone > 0" (click)="feedback(request.id)">Feedback</button>
-                    <hr>
+    <div class="container2 d-flex justify-content-between ">
+        <div class="sideNav">
+            <nav class="breadcrumbNav">
+                <ul>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/sendrequest">Send Request</a></li>  
+                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>Track Request</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="tab-content ps-5 " id="myTabContent">
+            <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
+
+                <div class="stats">
+              
                 </div>
 
+                <!-- class="ps-5 w-90 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-8 px-lg-2 col-xl-11 px-xl-0 px-xxl-3" -->
+                <!-- <button type="button" class="btn btn-primary justify-content-center printReportBtn" (click)="export()" target="_blank">Export Report</button> -->
+                <div class="content  mt-4 p-4">
+                    <h1 class="d-flex justify-content-center reqhead1"  id="alignTitleCenter" style=" padding: 30.5px; ">Admin View Request</h1>
+                    
+                    <div class="d-flex  margin  " id="table">
+                        
+                        <form>
+            
+                            <div class="w-100% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" >
+                                <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
+                                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{todo}}</label>
+                                <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned</label>
+                                <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress   {{progress}}</label>
+                                <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold        {{onHold}}</label>
+                                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done       {{completed}}</label>
+                            </div>
+                        </form>
+                        <form>
+                    
+                            <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%">
+                                <h1><b>REQUESTS</b></h1>
+                                <div class="middleTableDivTextMargin" *ngFor="let request of allRequest">
+                                    <p>Category:{{request.category}}</p>
+                                    <p>Description:{{request.description}}</p>
+                                    <p>Request Date:{{request.req_date}}</p>
+                                    <p>Venue:{{request.venue}}</p>
+                                    <button type="button" class="btn btn-secondary" *ngIf="numberDone > 0" (click)="feedback(request.id)">Feedback</button>
+                                    <hr>
+                                </div>
+            
+            
+                            </div>
+            
+                        </form>
+                    </div>
+                </div>
+
+                
 
             </div>
+           
 
-        </form>
-    </div>
-    </div>
 
+
+        </div>
+    </div>
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-    </footer>
-
+    </footer> 
 </body>
 
