--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-techpage></app-techpage> -->
 <!-- <app-closelog></app-closelog> -->
-<app-report></app-report>
+<!-- <app-report></app-report> -->
+<!-- <app-calender></app-calender> -->
