--- a/src/app/hodlogin-page/hodlogin-page.component.html
+++ b/src/app/hodlogin-page/hodlogin-page.component.html
@@ -7,7 +7,23 @@
             class="w-543px h-383px rounded-1 p-4 border bg-white"
             enctype="multipart/form-data">
             <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
-            <br>
+            <div *ngIf="showSuccessMsg1" class="alert alert-success" role="alert">
+              <strong>{{successmsg1}}</strong>
+              <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                  aria-label="Close"></button>
+          </div>
+    
+          <div *ngIf="showSuccessMsg2" class="alert alert-success" role="alert">
+            <strong>{{successmsg2}}</strong>
+            <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                aria-label="Close"></button>
+        </div>
+    
+        <div *ngIf="showSuccessMsg3" class="alert alert-success" role="alert">
+          <strong>{{successmsg3}}</strong>
+          <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+              aria-label="Close"></button>
+      </div>
           
             <label class="d-block mb-4">
               <span class="form-label d-block" class="row mx-0 justify-content-center">HOD Number</span>
