--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -8,7 +8,24 @@
           enctype="multipart/form-data"
           >
           <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
-          <br>
+        
+          <div *ngIf="showSuccessMsg1" class="alert alert-success" role="alert">
+            <strong>{{successmsg1}}</strong>
+            <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                aria-label="Close"></button>
+        </div>
+  
+        <div *ngIf="showSuccessMsg2" class="alert alert-success" role="alert">
+          <strong>{{successmsg2}}</strong>
+          <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+              aria-label="Close"></button>
+      </div>
+  
+      <div *ngIf="showSuccessMsg3" class="alert alert-success" role="alert">
+        <strong>{{successmsg3}}</strong>
+        <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+            aria-label="Close"></button>
+    </div>
           <label class="d-block mb-4">
             <span class="form-label d-block" class="row mx-0 justify-content-center">Technician Number</span>
             <br>
