--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other */
-@import '../node_modules/bootstrap/dist/css/bootstrap.css';
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+@import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
