--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
             <br>
             <input
             [(ngModel)]="adminLogin.password" name="adminLogin.password"
-              type="text"
+              type="password"
               class="form-control"
               placeholder="password"
             />
