--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -27,7 +27,7 @@
             <input
             [(ngModel)]="techLogin.password" name="techLogin.password"
             
-              type="text"
+              type="password"
               class="form-control"
               placeholder="214412845"
             />
