--- a/src/app/staffpage/staffpage.component.html
+++ b/src/app/staffpage/staffpage.component.html
@@ -80,8 +80,8 @@
                         <div class="reqhead1">SEND REQUEST</div>
                         <div *ngIf="showSuccessMsg" class="alert alert-success" role="alert">
                             <strong>{{successmsg}}</strong>
-                            <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
-                                aria-label="Close"></button>
+                            <!-- <button id="b12" type="button" class="btn-close" data-bs-dismiss="alert"
+                                aria-label="Close"></button> -->
                         </div>
     <!-- 
                         <label class="d-block mb-4" >
@@ -121,25 +121,23 @@
     
                             <select id="Cater" (change)="setCategory($event)" >
                                 <option value="#">Select Catergory</option>
-                                <option value="Hardware">Hardware</option>
-                                <option value="Electrical">Electrical</option>
-                                <option value="Plumbing">Plumbing</option>
+                                <option *ngFor="let catList of categoryList" value="{{[catList.id, catList.division_name]}}">{{catList.division_name}}</option>
                             </select>
                             
                         </label>
     
                         <label class="Cater" for="Cater">
     
-                            <h4>Catergory Items</h4>
+                            <h4>Catergory Issues</h4>
     
                             <select id="Cater" (change)="setCategoryItem($event)" >
-                                <option value="">Select Catergory Item</option>
-                                <option *ngFor="let cat of catItems" value="{{cat}}">{{cat}}</option>
+                                <option value="">Select Catergory Issue</option>
+                                <option *ngFor="let cat of catergoryIssue" value="{{cat.item_name}}">{{cat.item_name}}</option>
                             </select>
                             
                         </label>
 
-                        <label class="Cater" for="Cater">
+                        <!-- <label class="Cater" for="Cater">
     
                             <h4>Problem</h4>
     
@@ -148,32 +146,9 @@
                                 <option *ngFor="let catItem of problemcategoryItems" value="{{catItem}}">{{catItem}}</option>
                             </select>
                             
-                        </label>
+                        </label> -->
 
-                        <label class="Cater" for="Cater">
-    
-                            <h4>Priority</h4>
-    
-                            <select >
-                                <option value="">Month</option>
-                                <option *ngFor="let mon of months" value="{{mon}}">{{mon}}</option>
-                            </select>
-
-                            <select >
-                                <option value="">date</option>
-                                <option *ngFor="let day of days" value="{{day}}">{{day}}</option>
-                            </select>
-                            <select >
-                                <option value="">Hour</option>
-                                <option *ngFor="let hour of hours" value="{{hour}}">{{hour}}</option>
-                            </select>
-                            <select >
-                                <option value="">Minute</option>
-                                <option *ngFor="let minute of minutes" value="{{minute}}">{{minute}}</option>
-                            </select>
-                            
-
-                        </label>
+                   
     
                         <div class="mb-3">
                             <button type="submit" (click)="clear()" (click)="request()"
