--- a/src/app/closelog/closelog.component.html
+++ b/src/app/closelog/closelog.component.html
@@ -104,8 +104,8 @@
                                 <td>{{data.progress}}</td>
                                 <td>{{data.status}}</td>
                                 <td>
-                                <button type="button" class="btn btn-light" (click)="log($event,data.id)" name="data.status" [(ngModel)]="data.status" >Close Log</button>
-                                </td>
+                                <button type="button" class="btn btn-light" (click)="log($event,data.id)" >Close Log</button>
+                                </td> 
                               </tr>
                             </tbody>
                           </table>
