--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid">
+<div class="">
     <!-- <body class="container"> -->
         <div class="log d-flex justify-content-end">
             <nav class="header">
@@ -29,19 +29,20 @@
         <div class="sideNav">
             <nav class="breadcrumbNav">
                 <ul>
-                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admindash">Dashboard</a></li>
+                    <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/dash2">Dashboard</a></li>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>View Logs</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
                     <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/admincloselog">Close Logs</a></li>
+                    <li class="" id="breadcrumbpaddingreport"><a class="" id="hover" href="#" routerLink="/generatereport">Generate Report</a></li>
                     
                         
                         
                 </ul>
             </nav>
         </div>
-        <div class="tab-content ps-3 mt-5" id="myTabContent">
 
-
+        
+        <div class="tab-content ps-5 " id="myTabContent">
             <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
                 <div class="stats">
@@ -50,7 +51,7 @@
 
                 <!-- class="ps-5 w-90 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-8 px-lg-2 col-xl-11 px-xl-0 px-xxl-3" -->
                 <!-- <button type="button" class="btn btn-primary justify-content-center printReportBtn" (click)="export()" target="_blank">Export Report</button> -->
-                <div class="content card mt-4 p-4">
+                <div class="content card ">
 
                   
                     <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Request</h1>
@@ -61,7 +62,7 @@
                                     <th scope="col">Staff Number</th>
                                     <th scope="col">Description</th>
                                     <th scope="col">venue</th>
-                                    <th scope="col">Priority</th>
+                                    <!-- <th scope="col">Priority</th> -->
                                     <th scope="col">Status</th>
                                     <th scope="col">Date</th>
                                     <th scope="col">View Available</th>
@@ -74,12 +75,17 @@
                                     <th scope="row">{{me.staff_id}}</th>
                                     <td>{{me.description}}</td>
                                     <td>{{me.venue}}</td>
-                                    <td><select id="Cater" (change)="priority($event, me.id)" [(ngModel)]="me.priority"  >
+                                   <!-- <td>
+                                        <input type="text" placeholder="Day">
+                                        <input type="text"  placeholder="Month">
+                                        <input type="text"  placeholder="Year">
+
+                                         <select id="Cater" (change)="priority($event, me.id)" [(ngModel)]="me.priority"  >
                                         <option value="High">High</option>
                                         <option value="Low">Low</option>
-                                        <option value="Medium">Medium</option>
+                                        <option value="Medium">Medium</option> 
                                     </select>
-                                </td>
+                                </td>-->
                                     <td>{{me.progress}}</td>
                                     <td>{{me.req_date}}</td>
                                     <td><button type="button" class="btnAvailableTech" (click)=viewAvailableTech(me.id)><p>Artisan</p></button></td>
@@ -102,3 +108,4 @@
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
     </footer> 
 </body>
+
