--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -8,7 +8,7 @@
         <label class="d-block mb-4">
           <span class="form-label d-block" class="row mx-0 justify-content-center">Staff Number</span>
           <br>
-          <input [(ngModel)]="staffLogin.staff_id" name="staffLogin.staff_id" type="password" class="form-control"
+          <input [(ngModel)]="staffLogin.staff_id" name="staffLogin.staff_id" type="text" class="form-control"
             placeholder="Enter Staff Number" />
         </label>
 
