--- a/src/app/techlogin/techlogin.component.html
+++ b/src/app/techlogin/techlogin.component.html
@@ -29,7 +29,7 @@
             
               type="password"
               class="form-control"
-              placeholder="214412845"
+              placeholder="Password"
             />
           </label>
   
