--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -53,11 +53,11 @@
 
             <div class="w-100% rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" >
                 <h1><b>Click on the tabs to view progress of your request(s)</b></h1>
-                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{todo}}</label>
+                <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo         {{unAssign}}</label>
                 <label for="zero" id="blue" class="Assigned" (click)="assignTask()">Assigned     {{assigned}}</label>
                 <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress      {{inprogress}}</label>
                 <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold  {{hold}}</label>
-                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done</label>
+                <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done {{done}}</label>
             </div>
             </form>
 <form>
@@ -65,10 +65,11 @@
             <div class="d-flex justify-content-center w-100 rounded-5 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3" style="width:100%">
                 <h1><b>REQUESTS</b></h1>
                 <div class="middleTableDivTextMargin" *ngFor="let request of allRequest">
-                    <p>Category:{{request.category}}</p>
-                    <p>Description:{{request.description}}</p>
-                    <p>Request Date:{{request.req_date}}</p>
-                    <p>Venue:{{request.venue}}</p>
+                    <p>Category: {{request.category}}</p>
+                    <p>Description: {{request.description}}</p>
+                    <p>Request Date: {{request.req_date}}</p>
+                    <p *ngIf="isPending == false">Expected to be fixed: {{request.expected_date}}</p>
+                    <p>Venue: {{request.venue}}</p>
                     <button type="button" class="btn btn-secondary" *ngIf="numberDone > 0" (click)="feedback(request.id)">Feedback</button>
                     <hr>
                 </div>
@@ -84,4 +85,3 @@
     </footer>
 
 </body>
-
